--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "pannellum": "^2.5.6",
+    "panolens": "^0.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pannellum": "^0.2.14",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "three": "^0.164.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
