Update package.json fixed peerDependencies

--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react-scripts": "5.0.1",
     "three": "^0.164.1",
     "web-vitals": "^2.1.4"
-  },
+  }, 
+  "overrides": {
+     "postcss": "8.4.38"
+   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
